Desafio aula 2 - Adicionei links na página e aumentei as imagens

--- a/bloco_3/dia_1/exercicio.html
+++ b/bloco_3/dia_1/exercicio.html
@@ -7,11 +7,15 @@
   <body>
     <h1>Exercícios</h1>
     <ul>
-        <li>Pessoa 1</li>
-        <li>Pessoa 2</li>
-        <li>Pessoa 3</li>
+        <li><a href="#p1">Pessoa 1</a></li>
+        <li><a href="#p2">Pessoa 2</a></li>
+        <li><a href="#p3">Pessoa 3</a></li>
     </ul>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Sunset_in_Manaus.jpg/1200px-Sunset_in_Manaus.jpg" alt="Pôr do Sol em Manaus" width="300px">
-    <img src="3.png" alt="Wallpaper Trybe" width="300px">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Sunset_in_Manaus.jpg/1200px-Sunset_in_Manaus.jpg" alt="Pôr do Sol em Manaus" width="500px"><br>
+    <img src="3.png" alt="Wallpaper Trybe" width="500px">
+    <p id="p1">Pessoa 1</p>
+    <p id="p2">Pessoa 2</p>
+    <p id="p3">Pessoa 3</p>
+    <p><a href="https://www.google.com/" target="_blank">Google</a></p>
   </body>
 </html>
