Organizei a lista de pessoas

--- a/bloco_3/dia_1/exercicio.html
+++ b/bloco_3/dia_1/exercicio.html
@@ -7,15 +7,21 @@
   <body>
     <h1>Exercícios</h1>
     <ul>
-        <li><a href="#p1">Pessoa 1</a></li>
-        <li><a href="#p2">Pessoa 2</a></li>
-        <li><a href="#p3">Pessoa 3</a></li>
+        <li><a href="#p1">Geovani Lopes</a></li>
+        <li><a href="#p2">Perycles Reis</a></li>
+        <li><a href="#p3">Rafael Pufal</a></li>
+        <li><a href="#p4">Rafael Gerônimo</a></li>
+        <li><a href="#p5">Hudson</a></li>
+        <li><a href="#p6">Rafa Reis</a></li>
     </ul>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Sunset_in_Manaus.jpg/1200px-Sunset_in_Manaus.jpg" alt="Pôr do Sol em Manaus" width="500px"><br>
     <img src="3.png" alt="Wallpaper Trybe" width="500px">
-    <p id="p1">Pessoa 1</p>
-    <p id="p2">Pessoa 2</p>
-    <p id="p3">Pessoa 3</p>
+    <p id="p1">Geovani Lopes<br>Formado em Engenharia de Materiais e apaixonado por Tecnologia, estou atualmente estudando Desenvolvimento de Software na Trybe, uma escola que trabalha com metodologia ativa buscando simular as situações encontradas no dia a dia de uma empresa real.</p>
+    <p id="p2">Perycles Reis<br>Atualmente estudante de Desenvolvimento Web no programa da Trybe, e trabalho como autônomo na área de marketing digital em pequenas empresas. O cara gosta de andar de moto, cuidar de peixe, ir para igreja, jogar um basquetin e adora uns games no pc.</p>
+    <p id="p3">Rafael Pufal<br>Formado em Biotecnologia, atualmente é estudante de desenvolvimento web pela Trybe e Indie Game Developer pela Planet Monster</p>
+    <p id="p4">Rafael Gerônimo<br>Analista de Suporte porém apaixonado por desenvolvimento web. Atualmente estudando na Trybe para se tornar um grande desenvolvedor. Agora vai.</p>
+    <p id="p5">Hudson<br>Formação técnica em programação de jogos e automação industrial, o mestre das 4 linhas.</p>
+    <p id="p6">Rafa Reis<br>Mais um apaixonado por tecnologia, curte games, filmes e jogar conversa fora! Têm uma queda por McDonnald's e pizzarias! Gosta de ambientes tranquilos e músicas barulhentas.</p>
     <p><a href="https://www.google.com/" target="_blank">Google</a></p>
   </body>
 </html>
