--- a/bloco_3/dia_2/index.html
+++ b/bloco_3/dia_2/index.html
@@ -3,39 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
-        h1 {
-            font-size: 65px;
-            color: orange;
-            font-family: sans-serif;
-            text-align: center;
-            text-decoration: underline;
-        }
-
-        ul {
-            background-color: aqua;
-            font-style: italic;
-            line-height: 40px;
-        }
-
-        .bg-color{
-            background-color: yellow;
-        }
-
-        p {
-            font-weight: 600;
-            font-size: 3em;
-        }
-
-        body {
-            font-size: 16px;
-        }
-
-        li {
-            background-color: black;
-        }
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
@@ -60,6 +28,10 @@
     4 - Coloque o tamanho do paragrafo com o tamanho de 3 vezes o padrão do body
     5 - Explore as propriedades font-style, line-height, text-align e text-decoration
     6 - Troque a cor de fundo de cada item da lista para a cor correspondente ao texto
+    -->
+
+    <!-- Exercícios
+    Coloque todo o CSS criado até agora nos exercícios anteriores em um arquivo externo.
     -->
   </body>
 </html>
