Adicionei a primeira seçao ao artigo

--- a/bloco_3/dia_4/index.html
+++ b/bloco_3/dia_4/index.html
@@ -15,5 +15,22 @@
         <li><a href="">Contato</a></li>
       </ul>
     </nav>
+    <main>
+      <article>
+        <h2>Fatos sobre o Stomatopoda.</h2>
+        <section>
+          <h3>Informações Iniciais:</h3>
+          <ul>
+            <li>Nome científico: <em>Odontodactylus scyllarus</em></li>
+            <li>Reino: Animalia</li>
+            <li>Filo: Arthropoda</li>
+            <li>Subfilo: Crustacea</li>
+            <li>Classe: Malacostraca</li>
+            <li>Subclasse: Hoplocarida</li>
+            <li>Ordem: Stomatopoda</li>
+          </ul>
+        </section>
+      </article>
+    </main>
   </body>
 </html>
