Adicionei a segunda seçao ao artigo

--- a/bloco_3/dia_4/index.html
+++ b/bloco_3/dia_4/index.html
@@ -30,6 +30,11 @@
             <li>Ordem: Stomatopoda</li>
           </ul>
         </section>
+        <section>
+          <h3>Seus olhos são especiais.</h3>
+          <p>Os olhos dos serem humanos possuem milhões de células sensíveis a luz chamadas de <strong>bastonetes e cones</strong>. Os bastoneses fazem com que possamos enxergar luz e movimento, já os cones nos permitem ver cores. Existem três tipos de cones no olho humano que são sensíveis as cores verde, azul e vermelho. Já o Stomatopoda possue entre <strong>12 a 16 diferentes receptores de cor</strong>. O interessante é que isso não os faz enxergar um grande número de cores, como já foi pensado, eles são piores para diferenciar cores do que a maioria dos outros animais. Eles utilizam esses receptores para enxergar as cores de uma maneira bem única, diferente de outros animais mas similar a alguns satélites. <strong>Além de conseguirem distinguir cores, esses animais também enxergam ultravioleta.</strong></p>
+          <img src="http://cdn.sci-news.com/images/enlarge3/image_4022_1e-Mantis-Shrimp.jpg" alt="Os olhos de um Stomatopoda.">
+        </section>
       </article>
     </main>
   </body>
