Adicionei o aside e o footer

--- a/bloco_3/dia_4/index.html
+++ b/bloco_3/dia_4/index.html
@@ -19,16 +19,18 @@
       <article>
         <h2>Fatos sobre o Stomatopoda.</h2>
         <section>
-          <h3>Informações Iniciais:</h3>
-          <ul>
-            <li>Nome científico: <em>Odontodactylus scyllarus</em></li>
-            <li>Reino: Animalia</li>
-            <li>Filo: Arthropoda</li>
-            <li>Subfilo: Crustacea</li>
-            <li>Classe: Malacostraca</li>
-            <li>Subclasse: Hoplocarida</li>
-            <li>Ordem: Stomatopoda</li>
-          </ul>
+          <table>
+            <h3>Informações Iniciais:</h3>
+            <ul>
+              <li>Nome científico: <em>Odontodactylus scyllarus</em></li>
+              <li>Reino: Animalia</li>
+              <li>Filo: Arthropoda</li>
+              <li>Subfilo: Crustacea</li>
+              <li>Classe: Malacostraca</li>
+              <li>Subclasse: Hoplocarida</li>
+              <li>Ordem: Stomatopoda</li>
+            </ul>
+          </table>
         </section>
         <section>
           <h3>Seus olhos são especiais.</h3>
@@ -51,6 +53,10 @@
           </ul>
         </section>
       </article>
+      <aside>
+        <p>Ficou curioso? <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE" target="_blank">Clique aqui</a> e o veja em ação!</p>
+      </aside>
     </main>
+    <footer>Conteúdo compilado por Henrique Brito Elias</footer>
   </body>
 </html>
