Adicionei um pouco de CSS ao arquivo

--- a/bloco_3/dia_4/index.html
+++ b/bloco_3/dia_4/index.html
@@ -10,7 +10,7 @@
     <header>
       <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
     </header>
-    <nav>
+    <nav class="nav-menu">
       <ul>
         <li><a href="">Página Inicial</a></li>
         <li><a href="">Sobre</a></li>
