Modifiquei a table e um pouco do style

--- a/bloco_3/dia_4/index.html
+++ b/bloco_3/dia_4/index.html
@@ -23,15 +23,24 @@
         <section>
           <table>
             <h3>Informações Iniciais:</h3>
-            <ul>
-              <li>Nome científico: <em>Odontodactylus scyllarus</em></li>
-              <li>Reino: Animalia</li>
-              <li>Filo: Arthropoda</li>
-              <li>Subfilo: Crustacea</li>
-              <li>Classe: Malacostraca</li>
-              <li>Subclasse: Hoplocarida</li>
-              <li>Ordem: Stomatopoda</li>
-            </ul>
+            <tr>
+              <th>Nome científico</th>
+              <th>Reino</th>
+              <th>Filo</th>
+              <th>Subfilo</th>
+              <th>Classe</th>
+              <th>Subclasse</th>
+              <th>Ordem</th>
+            </tr>
+            <tr>
+              <td>Odontodactylus scyllarus</td>
+              <td>Animalia</td>
+              <td>Arthropoda</td>
+              <td>Crustacea</td>
+              <td>Malacostraca</td>
+              <td>Hoplocarida</td>
+              <td>Stomatopoda</td>
+            </tr>
           </table>
         </section>
         <section>
