--- a/bloco_5/dia_1/exercises.html
+++ b/bloco_5/dia_1/exercises.html
@@ -52,6 +52,11 @@
       }
       changeP();
       // 2. Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
+      function changeSquareColor() {
+        let color = document.getElementsByClassName('main-content');
+        color[0].style.backgroundColor = 'rgb(76,164,109)';
+      }
+      changeSquareColor();
       // 3. Crie uma função que mude a cor do quadrado vermelho para branco.
       // 4. Crie uma função que corrija o texto da tag <h1>.
       // 5. Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
