--- a/bloco_5/dia_1/exercises.html
+++ b/bloco_5/dia_1/exercises.html
@@ -58,6 +58,11 @@
       }
       changeSquareColor();
       // 3. Crie uma função que mude a cor do quadrado vermelho para branco.
+      function changeRedSquareColor() {
+        let color = document.getElementsByClassName('center-content');
+        color[0].style.backgroundColor = 'white';
+      }
+      changeRedSquareColor();
       // 4. Crie uma função que corrija o texto da tag <h1>.
       // 5. Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
       // 6. Crie uma função que exiba o conteúdo de todas as tags <p> no console.
