--- a/bloco_5/dia_1/exercises.html
+++ b/bloco_5/dia_1/exercises.html
@@ -64,6 +64,11 @@
       }
       changeRedSquareColor();
       // 4. Crie uma função que corrija o texto da tag <h1>.
+      function correctText() {
+        let text = document.getElementsByClassName('title');
+        text[0].innerHTML = 'Exercício 5.1 - JavaScript';
+      }
+      correctText();
       // 5. Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
       // 6. Crie uma função que exiba o conteúdo de todas as tags <p> no console.
     </script>
