Correção do Exercício 4

--- a/bloco_5/dia_1/exercises.html
+++ b/bloco_5/dia_1/exercises.html
@@ -65,7 +65,7 @@
       changeRedSquareColor();
       // 4. Crie uma função que corrija o texto da tag <h1>.
       function correctText() {
-        let text = document.getElementsByClassName('title');
+        let text = document.getElementsByTagName('h1');
         text[0].innerHTML = 'Exercício 5.1 - JavaScript';
       }
       correctText();
