--- a/bloco_5/dia_2/exercises.html
+++ b/bloco_5/dia_2/exercises.html
@@ -57,6 +57,7 @@
   </head>
   <body>
     <script>
+      // 1. Adicione a tag h1 com o texto Exercício 5.2 - JavaScript DOM como filho da tag body ;
       let header1 = document.createElement('h1');
       header1.innerHTML = 'Exercício 5.2 - JavaScript DOM';
       document.body.appendChild(header1);
