--- a/bloco_5/dia_2/exercises.html
+++ b/bloco_5/dia_2/exercises.html
@@ -69,6 +69,10 @@
       let centerContent = document.createElement('div');
       centerContent.className = 'center-content';
       document.querySelector('.main-content').appendChild(centerContent);
+      //4. Adicione a tag p como filho do div criado no passo 3 e coloque algum texto;
+      let parag = document.createElement('p');
+      parag.innerHTML = 'Algum texto';
+      document.querySelector('.center-content').appendChild(parag);
     </script>
   </body>
 </html>
