--- a/bloco_5/dia_2/exercises.html
+++ b/bloco_5/dia_2/exercises.html
@@ -77,6 +77,10 @@
       let leftContent = document.createElement('div');
       leftContent.className = 'left-content';
       document.querySelector('.main-content').appendChild(leftContent);
+      //6. Adicione a tag div com a classe right-content como filho da tag div criada no passo 2;
+      let rightContent = document.createElement('div');
+      rightContent.className = 'right-content';
+      document.querySelector('.main-content').appendChild(rightContent);
     </script>
   </body>
 </html>
