--- a/bloco_5/dia_2/exercises.html
+++ b/bloco_5/dia_2/exercises.html
@@ -95,7 +95,11 @@
         listItem.innerHTML = listItems[index];
         document.querySelector('ul').appendChild(listItem);
       }
-      
+      //9. Adicione 3 tags h3 , todas sendo filhas do div criado no passo 2.
+      for (let index = 1; index <= 3; index += 1) {
+        let header2 = document.createElement('h2');
+        document.querySelector('.main-content').appendChild(header2);
+      }
     </script>
   </body>
 </html>
