--- a/bloco_5/dia_2/exercises.html
+++ b/bloco_5/dia_2/exercises.html
@@ -100,6 +100,9 @@
         let header2 = document.createElement('h2');
         document.querySelector('.main-content').appendChild(header2);
       }
+      //Parte 2
+      //1. Adicione a classe title na tag h1 criada;
+      header1.className = 'title';
     </script>
   </body>
 </html>
