--- a/bloco_5/dia_2/exercises.html
+++ b/bloco_5/dia_2/exercises.html
@@ -99,10 +99,13 @@
       for (let index = 1; index <= 3; index += 1) {
         let header2 = document.createElement('h2');
         document.querySelector('.main-content').appendChild(header2);
+        //2. Adicione a classe description nas 3 tags h3 criadas;
+        header2.className = 'description';
       }
       //Parte 2
       //1. Adicione a classe title na tag h1 criada;
       header1.className = 'title';
+      
     </script>
   </body>
 </html>
