--- a/bloco_5/dia_2/exercises.html
+++ b/bloco_5/dia_2/exercises.html
@@ -105,6 +105,8 @@
       //Parte 2
       //1. Adicione a classe title na tag h1 criada;
       header1.className = 'title';
+      //3. Remova o div criado no passo 5 (aquele que possui a classe left-content ). Utilize a função .removeChild() ;
+      document.querySelector('.main-content').removeChild(leftContent);
       
     </script>
   </body>
