--- a/bloco_5/dia_2/exercises.html
+++ b/bloco_5/dia_2/exercises.html
@@ -109,6 +109,8 @@
       document.querySelector('.main-content').removeChild(leftContent);
       //4. Centralize o div criado no passo 6 (aquele que possui a classe right-content ). Dica: para centralizar, basta configurar o margin-right: auto do div;
       rightContent.style.marginRight = 'auto';
+      //5. Troque a cor de fundo do elemento pai da div criada no passo 3 (aquela que possui a classe center-content ) para a cor verde;
+      mainContent.style.backgroundColor = 'green';
     </script>
   </body>
 </html>
