--- a/bloco_5/dia_2/exercises.html
+++ b/bloco_5/dia_2/exercises.html
@@ -111,6 +111,14 @@
       rightContent.style.marginRight = 'auto';
       //5. Troque a cor de fundo do elemento pai da div criada no passo 3 (aquela que possui a classe center-content ) para a cor verde;
       mainContent.style.backgroundColor = 'green';
+      //6. Remova os dois últimos elementos ( nove e dez ) da lista criada no passo 8.
+      let lista = document.querySelectorAll('li');
+      for (let index = 0; index < lista.length; index += 1) {
+        let element = lista[index];
+        if (element.innerText.includes('9') || element.innerText.includes('10')) {
+          document.querySelector('ul').removeChild(element);
+        }
+      }
     </script>
   </body>
 </html>
