Alterei a funçao que gera o curriculo na tela

--- a/bloco_6/dia_1/form.html
+++ b/bloco_6/dia_1/form.html
@@ -11,7 +11,7 @@
     <h1>Currículo</h1>
     <h3><em>Cadastre seu currículo abaixo</em></h3>
   </header>
-  <form action="#" class="container" novalidate>
+  <form action="#" class="container">
     <fieldset class="form-fieldset">
       <legend>Dados Pessoais</legend>
       <div class="form-row">
