--- a/bloco_6/dia_5/exercise2.html
+++ b/bloco_6/dia_5/exercise2.html
@@ -14,7 +14,7 @@
   <div class="container">
 
     <header>
-      <p>Alice's Adventures in Wonderland</p>
+      <p class="text-center">Alice's Adventures in Wonderland</p>
 
       <nav>
         <ul>
@@ -27,7 +27,7 @@
     </header>
 
     <aside class="aside-one">
-      <h2>Chapters</h2>
+      <h2 class="text-center">Chapters</h2>
       <ul>
         <li>I. Down the Rabbit-Hole</li>
         <li>II. The Pool of Tears</li>
@@ -45,7 +45,7 @@
     </aside>
 
     <aside class="aside-two">
-      <h2>Information</h2>
+      <h2 class="text-center">Information</h2>
       <ul>
         <li>Title: Alice's Adventures in Wonderland</li>
 
@@ -59,8 +59,8 @@
     </aside>
 
     <article class="main-content">
-      <h1>
-        CHAPTER I. Down the Rabbit-Hole
+      <h1 class="text-center">
+        CHAPTER I.<br> Down the Rabbit-Hole
       </h1>
       <p>
         Alice was beginning to get very tired of sitting by her sister on the
@@ -222,8 +222,8 @@
     </article>
 
     <footer>
-      <h3>Copyright</h3>
-      <p>Project Gutenberg's Alice's Adventures in Wonderland, by Lewis Carroll</p>
+      <h3 class="text-center">Copyright</h3>
+      <p class="text-center">Project Gutenberg's Alice's Adventures in Wonderland, by Lewis Carroll</p>
 
       <p>This eBook is for the use of anyone anywhere at no cost and with
         almost no restrictions whatsoever. You may copy it, give it away or
